# vsbs

./: .editorconfig  .env.example  .gitattributes  .gitignore  .lighthouserc.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SAFETY-NOTICE.md  SECURITY.md  STACK.md  SUPPORT.md  biome.json  idea.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
chaos/: README.md  package.json  runner.ts  vitest.config.ts
deploy/: cloudbuild.api.yaml  cloudbuild.web.yaml  (+1 more)
tools/carla/: .dockerignore  .env.example  .gcloudignore  README.md  cloudbuild.yaml  pyproject.toml  requirements.txt
tools/carla/cloudrun/: .dockerignore  Dockerfile  cloudbuild.yaml  requirements.txt  server.py
tools/carla/replay/: town10hd-brake-failure.jsonl
tools/carla/scripts/: bootstrap_and_run.cmd  bootstrap_and_run.ps1  bootstrap_vm.sh  install_windows_deps.cmd  install_windows_deps.ps1  record_demo.sh  run_chaos_on_vm.sh  run_live_demo.cmd  run_live_demo.ps1  run_live_demo.sh  run_on_vm.sh  smoke.sh
tools/carla/tests/: conftest.py  test_faults.py  test_orchestrator.py  test_replay.py  test_schemas.py
tools/carla/vsbs_carla/: __init__.py  agent.py  api.py  config.py  destinations.py  faults.py  live_frame.py  predictor_model.py  replay.py  schemas.py  sensors.py  world.py
tools/carla/vsbs_carla/scripts/: __init__.py  eval_predictor.py  gpu_eval.py  record_trace.py  run_chaos_demo.py  run_demo.py  run_demo_live.py  test_drive.py  train_model.py
(+460 files in other folders)
